Fix radio button alignment on booking form

--- a/css/style.css
+++ b/css/style.css
@@ -372,14 +372,14 @@ body {
   transform: translateY(-4rem); }
 
 .form__radio-group {
-  width: 50%;
+  width: 35%;
   display: inline-block; }
 
 .form__radio-input {
   display: none; }
 
 .form__radio-label {
-  font-size: 1.5rem;
+  font-size: 1.6rem;
   cursor: pointer;
   position: relative;
   padding-left: 4.5rem; }
@@ -392,7 +392,8 @@ body {
   display: inline-block;
   position: absolute;
   left: 0;
-  top: -0.5rem; }
+  top: -0.4rem;
+  margin-left: 0.7rem; }
   .form__radio-button::after {
     content: "";
     display: block;
@@ -533,7 +534,6 @@ body {
 .booking {
   background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 50%, transparent 50%), url(../img/nat-10.jpg);
   background-size: 100%;
-  height: 50rem;
   border-radius: 3px;
   box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.2); }
   .booking__form {
