--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -47,7 +47,7 @@
   }
 
   &__radio-group {
-    width: 50%;
+    width: 35%;
     display: inline-block;
   }
 
@@ -56,7 +56,7 @@
   }
 
   &__radio-label {
-    font-size: 1.5rem;
+    font-size: 1.6rem;
     cursor: pointer;
     position: relative;
     padding-left: 4.5rem;
@@ -70,7 +70,8 @@
     display: inline-block;
     position: absolute;
     left: 0;
-    top: -0.5rem;
+    top: -0.4rem;
+    margin-left: 0.7rem;
 
     &::after {
       content: "";
