--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -51,7 +51,6 @@
     url(../img/nat-10.jpg);
   background-size: 100%;
 
-  height: 50rem;
   border-radius: 3px;
   box-shadow: 0 1.5rem 4rem rgba($color-black, 0.2);
 
